--- a/week6.html
+++ b/week6.html
@@ -68,9 +68,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
-<tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
