--- a/freeagt.html
+++ b/freeagt.html
@@ -1,100 +1,100 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2020 Free Agent Leaderboard<br>(Through week 5)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2020 Free Agent Leaderboard<br>(Through week 6)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Derek Carr             </td><td><font size=3> 775</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 660</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 655</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 655</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 840</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Derek Carr             </td><td><font size=3> 775</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 735</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 680</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 520</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Dwayne Haskins         </td><td><font size=3> 385</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Nick Foles             </td><td><font size=3> 345</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Philip Rivers          </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 260</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Jeff Driskel           </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Brett Rypien           </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Nick Mullens           </td><td><font size=3> 160</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Kyle Allen             </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Philip Rivers          </td><td><font size=3> 515</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 485</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Nick Foles             </td><td><font size=3> 445</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Dwayne Haskins         </td><td><font size=3> 385</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 370</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 310</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Kyle Allen             </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Jeff Driskel           </td><td><font size=3> 215</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Brett Rypien           </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Nick Mullens           </td><td><font size=3> 160</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Rex Burkhead           </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>Brian Hill             </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>Jalen Richard          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Jeff Wilson            </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>TJ Yeldon              </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Darrel Williams        </td><td><font size=3> 105</td></tr>
 <tr><td><font size=3>Peyton Barber          </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Jamaal Williams        </td><td><font size=3>  85</td></tr>
+<tr><td><font size=3>Giovani Bernard        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Reggie Bonnafon        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Frank Gore             </td><td><font size=3>  55</td></tr>
 <tr><td><font size=3>Josh Adams             </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Travis Homer           </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Alec Ingold            </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Jakob Johnson          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Dion Lewis             </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
+<tr><td><font size=3>Travis Fulgham         </td><td><font size=3> 385</td></tr>
 <tr><td><font size=3>Jamison Crowder        </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>Christian Kirk         </td><td><font size=3> 350</td></tr>
 <tr><td><font size=3>Ced Wilson             </td><td><font size=3> 350</td></tr>
 <tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>Travis Fulgham         </td><td><font size=3> 275</td></tr>
+<tr><td><font size=3>Keelan Cole            </td><td><font size=3> 320</td></tr>
 <tr><td><font size=3>Mecole Hardman         </td><td><font size=3> 270</td></tr>
+<tr><td><font size=3>Preston Williams       </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 255</td></tr>
 <tr><td><font size=3>Mike Williams          </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>Keelan Cole            </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Anthony Miller         </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>Braxton Berrios        </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Randall Cobb           </td><td><font size=3> 220</td></tr>
 <tr><td><font size=3>David Moore            </td><td><font size=3> 220</td></tr>
 <tr><td><font size=3>Tre'Quan Smith         </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>Greg Ward              </td><td><font size=3> 210</td></tr>
-<tr><td><font size=3>Preston Williams       </td><td><font size=3> 210</td></tr>
-<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>Allen Lazard           </td><td><font size=3> 200</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Robert Tonyan          </td><td><font size=3> 445</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Darren Fells           </td><td><font size=3> 315</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Jimmy Graham           </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Dalton Schultz         </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Darren Fells           </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>OJ Howard              </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>OJ Howard              </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Trey Burton            </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Hunter Henry           </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>7)</td><td><font size=3>Jordan Reed            </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Greg Olsen             </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Eric Ebron             </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Tyler Kroft            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>CJ Uzomah              </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Gerald Everett         </td><td><font size=3>  95</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Will Dissly            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Tyler Eifert           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Anthony Firkser        </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Nick Boyle             </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Adam Shaheen           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Greg Olsen             </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Eric Ebron             </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Tyler Kroft            </td><td><font size=3> 100</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 580</td></tr>
-<tr><td><font size=3>Graham Gano            </td><td><font size=3> 530</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 520</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 640</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3> 590</td></tr>
 <tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 465</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 380</td></tr>
-<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>Cody Parkey            </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 425</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 385</td></tr>
+<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 375</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>Cody Parkey            </td><td><font size=3> 335</td></tr>
 <tr><td><font size=3>Sam Ficken             </td><td><font size=3> 315</td></tr>
 <tr><td><font size=3>Mike Badgley           </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>Dan Bailey             </td><td><font size=3> 280</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>Dan Bailey             </td><td><font size=3> 285</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 270</td></tr>
 <tr><td><font size=3>Jason Myers            </td><td><font size=3> 210</td></tr>
 </table>
 </td><td valign=top>
@@ -103,17 +103,17 @@
 <tr><td><font size=3>Gabriel Davis          </td><td><font size=3> 240</td></tr>
 <tr><td><font size=3>Devin Duvernay         </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Isaiah Rodgers         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Tyler Johnson          </td><td><font size=3> 105</td></tr>
 <tr><td><font size=3>Freddie Swain          </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Cole Kmet              </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Ke'Shawn Vaughn        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Harrison Bryant        </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Reggie Gilliam         </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Collin Johnson         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Tyler Johnson          </td><td><font size=3>  30</td></tr>
 <tr><td><font size=3>Quintez Cephus         </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Nick Westbrook         </td><td><font size=3>   5</td></tr>
 <tr><td><font size=3>Devin Asiasi           </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Dalton Keene           </td><td><font size=3>   0</td></tr>
-<tr><td><font size=3>Cole Kmet              </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Tucker McCann          </td><td><font size=3>   0</td></tr>
-<tr><td><font size=3>Anthony McFarland      </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
