--- a/week7.html
+++ b/week7.html
@@ -81,10 +81,10 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
 <tr><td>Newton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Freeman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hilton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Tonyan</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
@@ -95,13 +95,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
-<tr><td>Dalton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gaskin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -114,7 +114,7 @@
 <tr><td>Lindsay</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Golladay</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Parker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>-</td>             <td></td><td align=right>0</td></tr>
 <tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Sloman</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -129,10 +129,10 @@
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>DaJohnson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>RAnderson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gostkowski</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
