--- a/week9.html
+++ b/week9.html
@@ -21,14 +21,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (2)</b></font></td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Wentz</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
 <tr><td>MDavis</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Claypool</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Taylor</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -170,7 +170,7 @@
     <td><font size=2>6</font></td>
     <td><font size=2>2</font></td>
     <td><font size=2>7030</font></td>
-    <td><font size=2>4815</font></td>
+    <td><font size=2>4605</font></td>
     <td><font size=2>1555</font></td>
     <td><font size=2>605</font></td>
     <td><font size=2>2</font></td></tr>
@@ -217,10 +217,10 @@
 <tr><td><font size=2>Steven(2)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5540</font></td>
+    <td><font size=2>5330</font></td>
     <td><font size=2>5020</font></td>
     <td><font size=2>1125</font></td>
-    <td><font size=2>340</font></td>
+    <td><font size=2>255</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Mike(4)</font></td>
     <td><font size=2>4</font></td>
