--- a/freeagt.html
+++ b/freeagt.html
@@ -1,119 +1,119 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2020 Free Agent Leaderboard<br>(Through week 8)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2020 Free Agent Leaderboard<br>(Through week 9)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 970</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 940</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 780</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Philip Rivers          </td><td><font size=3> 755</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 735</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 650</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Nick Foles             </td><td><font size=3> 625</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 520</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Kyle Allen             </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Dwayne Haskins         </td><td><font size=3> 385</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Drew Lock              </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Nick Mullens           </td><td><font size=3> 265</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Jeff Driskel           </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3>1140</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 970</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Philip Rivers          </td><td><font size=3> 785</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Nick Foles             </td><td><font size=3> 780</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 780</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 735</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 725</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Drew Lock              </td><td><font size=3> 645</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 520</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 490</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Nick Mullens           </td><td><font size=3> 410</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Kyle Allen             </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Dwayne Haskins         </td><td><font size=3> 385</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 310</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
 <tr><td><font size=3>Jeff Wilson            </td><td><font size=3> 455</td></tr>
 <tr><td><font size=3>Giovani Bernard        </td><td><font size=3> 380</td></tr>
+<tr><td><font size=3>Rex Burkhead           </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Mark Ingram            </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>Devontae Booker        </td><td><font size=3> 210</td></tr>
 <tr><td><font size=3>Malcolm Brown          </td><td><font size=3> 210</td></tr>
 <tr><td><font size=3>Brian Hill             </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Rex Burkhead           </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Wayne Gallman          </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Jalen Richard          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Kerryon Johnson        </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Dion Lewis             </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>TJ Yeldon              </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Darrel Williams        </td><td><font size=3> 105</td></tr>
 <tr><td><font size=3>Peyton Barber          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Wayne Gallman          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Justin Jackson         </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Jordan Wilkins         </td><td><font size=3> 100</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Odell Beckham          </td><td><font size=3> 635</td></tr>
+<tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 630</td></tr>
 <tr><td><font size=3>Travis Fulgham         </td><td><font size=3> 530</td></tr>
-<tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 480</td></tr>
+<tr><td><font size=3>David Moore            </td><td><font size=3> 480</td></tr>
+<tr><td><font size=3>Jamison Crowder        </td><td><font size=3> 460</td></tr>
 <tr><td><font size=3>Mecole Hardman         </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>Mike Williams          </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>Jamison Crowder        </td><td><font size=3> 360</td></tr>
-<tr><td><font size=3>Diontae Johnson        </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>Mike Williams          </td><td><font size=3> 440</td></tr>
+<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 420</td></tr>
+<tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3> 400</td></tr>
+<tr><td><font size=3>Diontae Johnson        </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>Marvin Jones           </td><td><font size=3> 365</td></tr>
+<tr><td><font size=3>Preston Williams       </td><td><font size=3> 365</td></tr>
 <tr><td><font size=3>Ced Wilson             </td><td><font size=3> 350</td></tr>
-<tr><td><font size=3>Corey Davis            </td><td><font size=3> 340</td></tr>
 <tr><td><font size=3>Scott Miller           </td><td><font size=3> 340</td></tr>
-<tr><td><font size=3>Jalen Guyton           </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>Keelan Cole            </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>David Moore            </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>Marvin Jones           </td><td><font size=3> 290</td></tr>
+<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>Emmanuel Sanders       </td><td><font size=3> 330</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
 <tr><td><font size=3>1)</td><td><font size=3>Darren Fells           </td><td><font size=3> 315</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Trey Burton            </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Eric Ebron             </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>OJ Howard              </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Donald Parham          </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 170</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Jack Doyle             </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>David Njoku            </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jordan Reed            </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Anthony Firkser        </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Tyler Kroft            </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Nick Boyle             </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Adam Shaheen           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Eric Ebron             </td><td><font size=3> 275</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Irv Smith              </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Trey Burton            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>OJ Howard              </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Tyler Kroft            </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Donald Parham          </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Jack Doyle             </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>David Njoku            </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Jordan Reed            </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Anthony Firkser        </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Nick Boyle             </td><td><font size=3> 125</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 785</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3> 775</td></tr>
 <tr><td><font size=3>Randy Bullock          </td><td><font size=3> 760</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 680</td></tr>
-<tr><td><font size=3>Graham Gano            </td><td><font size=3> 645</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 625</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 540</td></tr>
-<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 535</td></tr>
-<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 530</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 485</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 675</td></tr>
+<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 610</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 590</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 505</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3> 495</td></tr>
 <tr><td><font size=3>Cody Parkey            </td><td><font size=3> 475</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3> 385</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 420</td></tr>
+<tr><td><font size=3>Dan Bailey             </td><td><font size=3> 325</td></tr>
 <tr><td><font size=3>Sam Ficken             </td><td><font size=3> 315</td></tr>
-<tr><td><font size=3>Dan Bailey             </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>Sergio Castillo        </td><td><font size=3> 265</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
+<tr><td><font size=3>Gabriel Davis          </td><td><font size=3> 325</td></tr>
 <tr><td><font size=3>Sam Sloman             </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>Gabriel Davis          </td><td><font size=3> 240</td></tr>
 <tr><td><font size=3>Harrison Bryant        </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Devin Duvernay         </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Isaiah Rodgers         </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Tyler Johnson          </td><td><font size=3> 155</td></tr>
 <tr><td><font size=3>Albert Okwuegbunam     </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Gabe Nabers            </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Joe Reed               </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Freddie Swain          </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Cole Kmet              </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Adam Trautman          </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Ke'Shawn Vaughn        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Reggie Gilliam         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>KJ Hamler              </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Collin Johnson         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Gabe Nabers            </td><td><font size=3>  50</td></tr>
 </table>
 </td></tr></table>
