--- a/week9.html
+++ b/week9.html
@@ -73,7 +73,7 @@
 <tr><td>Beasley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>75</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>105</td></tr>
-<tr><td>Ruggs</td>         <td></td><td align=right>95</td></tr>
+<tr><td>JRobinson</td>     <td></td><td align=right>95</td></tr>
 <tr><td></td>              <td></td><td align=right>545</td></tr>
 </table>
 </td>
